# smv_suit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  diesel.toml
api_interface/: app.py  model.py
api_interface/routes/: bill.py  depodraw.py  finance.py  money_nodes.py  organisation.py  other.py  person.py  product.py  transaction.py  transaction_entity.py  transactions.py
api_interface/templates/: api.html  finance.html  index.html
client/: README.md  build.yaml  pubspec.yaml
client/lib/: app_component.dart  app_component.html  client.dart  main.dart  schema.ast.gql.dart  schema.graphql  schema.schema.gql.dart  schema.schema.gql.g.dart  serializers.gql.dart  serializers.gql.g.dart
client/test/: app_test.dart
definitions/: README.md
extras/database/: docker-compose.yml
migrations/2020-07-30-105003_all/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: auth.rs  bill.rs  bills.rs  depodraw.rs  depodraws.rs  finance.rs  mod.rs  money_nodes.rs  organisations.rs  persons.rs  products.rs  statement_of_accounts.rs  transaction_entities.rs  transactions.rs  types.rs
src/endpoints/: mod.rs
src/graphql/: bill.rs  context.rs  depodraw.rs  mod.rs  money_node.rs  organisation.rs  person.rs  product.rs  statement_of_account.rs  transaction.rs  transaction_entity.rs
src/models/: bill.rs  depodraw.rs  mod.rs  money_node.rs  organisation.rs  person.rs  product.rs  statement_of_account.rs  tech.rs  transaction.rs  transaction_entity.rs  user.rs
structure/: diagram
templates/: index.html
(+107 files in other folders)
