[package]
name = "smv_suit"
version = "0.0.1"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.1"
juniper = "0.14.2"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
chrono = "0.4.13"