[package]
name = "smv_suit"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-cors = "0.3.0-alpha.1"
juniper = "0.14.2"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
chrono = "0.4.15"
log = "0.4.11"
fern = "0.6.0"
serde_json = "1.0.57"